--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 
 <app-nav
-  [loggedUser]="loggedUser"
+  [loggedUser]="null"
   (clickedPosts)="goToPosts()"
   (clickedProfile)="goToProfile()"
   (clickedLogIn)="goToLogIn()"
   (clickedLogOut)="logOut()"
 ></app-nav>
-
-<!--<app-post-view></app-post-view>-->
