add log in component and user service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 
-<app-nav
-  [loggedUser]="null"
-  (clickedPosts)="goToPosts()"
-  (clickedProfile)="goToProfile()"
-  (clickedLogIn)="goToLogIn()"
-  (clickedLogOut)="logOut()"
-></app-nav>
+<!--<app-nav-->
+  <!--[loggedUser]="null"-->
+  <!--(clickedPosts)="goToPosts()"-->
+  <!--(clickedProfile)="goToProfile()"-->
+  <!--(clickedLogIn)="goToLogIn()"-->
+  <!--(clickedLogOut)="logOut()"-->
+<!--&gt;</app-nav>-->
+
+<app-login></app-login>
