el usuario loggeado ahora también es almacendo en el localStorage

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,4 +18,6 @@
   
     <p *ngIf="showLogInError" class="text-danger">Usuario no existe o contraseña inválida</p>
   
+    <button (click)="signUp()">Sign Up</button>
+
   </form>
