--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,6 +4,9 @@
     <li>
       <a class="nav-link active" href="#" (click)="emitPostsClick()">Posts</a>
     </li>
+    <li>
+      <a class="nav-link active" [routerLink]="['/post-list']">Listado de Posts</a>
+    </li>
   </div>
 
   <div class="nav-item my-flex">
