cambio en el search box para tener la opcion de todos los tags en el filtrado

--- a/src/app/post/listado-post/listado-post.component.html
+++ b/src/app/post/listado-post/listado-post.component.html
@@ -7,6 +7,7 @@
           <!-- <input type="text" formControlName="search" required> -->
           <select formControlName="search" >
             <option value="">Select your option</option>
+            <option value="AllTags">Show all</option>
             <option *ngFor="let eachVal of this.allTags">{{ eachVal }}</option>
           </select>
         </label>
