completo filtrado por tags de post

--- a/src/app/post/listado-post/listado-post.component.html
+++ b/src/app/post/listado-post/listado-post.component.html
@@ -8,7 +8,7 @@
           <select formControlName="search" >
             <option value="">Select your option</option>
             <option value="AllTags">Show all</option>
-            <option *ngFor="let eachVal of this.allTags">{{ eachVal }}</option>
+            <option *ngFor="let eachVal of this.allTags" >{{ eachVal }}</option>
           </select>
         </label>
         &nbsp;
@@ -17,15 +17,15 @@
     </div>
   </div>
 
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-12">
       <p>Form Status: {{ searchForm.status }}</p>
       <p>Form Value: {{ searchForm.value | json }}</p>
     </div>
-  </div>
+  </div> -->
 
   <div class="row">
-    <div *ngFor="let post of allPost">
+    <div *ngFor="let post of tempPost">
       <div class="col">
         <div class="card">
           <div class="card-header text-center">
