finalizada la lista de posts

--- a/src/app/post/listado-post/listado-post.component.html
+++ b/src/app/post/listado-post/listado-post.component.html
@@ -1,73 +1,6 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
-        <label>
-          Search from Property:
-          <select formControlName="property" (ngModelChange)="updateSecondFilter()">
-            <option value="">Select your option</option>
-            <option value="rating">rating</option>
-            <option value="date">Date</option>
-            <option value="author">Author</option>
-            <option value="numVisits">Visits</option>
-            <option value="tags">Tags</option>
-          </select>
-        </label>
-        &nbsp;
-
-        <label *ngIf="this.secondFilter">
-          Search:
-          <!-- <input type="text" formControlName="search" required> -->
-          <select formControlName="search">
-            <option value="">Select your option</option>
-            <option value="AllTags">Show all</option>
-            <option *ngFor="let eachVal of this.postFilterSpecificSearchs">{{ eachVal }}</option>
-          </select>
-        </label>
-
-
-        &nbsp;
-
-        <button type="submit" class="btn btn-dark" [disabled]="!searchForm.valid">Submit</button>
-      </form>
+<app-post-form (finalPostEvent)="workFilteredList($event)" (showList)="showResults($event)"></app-post-form>
+<div *ngIf="showList">
+    <div *ngFor="let post of finalPosts">
+        <app-post-thumbnail [post]="post"></app-post-thumbnail>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-12">
-      <p>Form Status: {{ searchForm.status }}</p>
-      <p>Form Value: {{ searchForm.value | json }}</p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div *ngFor="let post of tempPost">
-      <div class="col">
-        <div class="card">
-          <div class="card-header text-center">
-            <em>{{ post.title }}</em>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title text-center">Post Information</h5>
-            <p class="card-text">Author: {{ post.author }}</p>
-            <p class="card-text">Date: {{ post.date | date }}</p>
-            <p class="card-text">Tags:
-              <select>
-                <option *ngFor="let eachVal of post['tags']">{{ eachVal }}</option>
-              </select>
-            </p>
-            <p class="card-text">Visits: {{ post.numVisits }}</p>
-          </div>
-          <div class="card-footer">
-            <div class="text-center">
-              <p class="card-text">Post Rating: {{ post.rating }}</p>
-              <button type="button" class="btn btn-dark">Edit Post</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br />
-    </div>
-  </div>
-
 </div>
