changes from PR #2 and bug fix regarding to arrays and postFilterService

--- a/src/app/post/listado-post/listado-post.component.html
+++ b/src/app/post/listado-post/listado-post.component.html
@@ -1,4 +1,4 @@
-<app-post-form (finalPostEvent)="workFilteredList($event)" (showList)="showResults($event)"></app-post-form>
+<app-post-filter-form (finalPostEvent)="workFilteredList($event)" (showList)="showResults($event)"></app-post-filter-form>
 <div *ngIf="showList">
     <div *ngFor="let post of finalPosts">
         <app-post-thumbnail [post]="post"></app-post-thumbnail>
