--- a/src/app/post/post-thumbnail/post-thumbnail.component.html
+++ b/src/app/post/post-thumbnail/post-thumbnail.component.html
@@ -17,7 +17,7 @@
     <div class="card-footer">
       <div class="text-center">
         <p class="card-text">Post Rating: {{ post.rating }}</p>
-        <button type="button" class="btn btn-dark">Edit Post</button>
+        <button type="button" class="btn btn-dark">View Post</button>
       </div>
     </div>
   </div>
