cambios del crear editar post

--- a/src/app/post/post-edit/post-edit.component.html
+++ b/src/app/post/post-edit/post-edit.component.html
@@ -37,6 +37,15 @@
     </div>
 </div> 
 
+<br />
+
+
+  <h6> Post </h6>
+
+    <button (click)="setState('edit')">Edit</button>
+    <button (click)="setState('view')">View</button>
+    <br><br>
+  
 </form>
 
 <br>Dirty:   {{ postForm.dirty }}
