--- a/src/app/post/post-edit/post-edit.component.css
+++ b/src/app/post/post-edit/post-edit.component.css
@@ -2,9 +2,14 @@
     color: red;
     font-size: 12px;
 }
-.post-input {
-    margin: 20px;
+
+.quillEdit {
+    margin-left: 25px;
+    margin-right: 25px;
 }
-.tags-input {
-    margin: 10px;
+
+.doneButton {
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: 50px;
 }
