--- a/src/app/post/post-edit/post-edit.component.html
+++ b/src/app/post/post-edit/post-edit.component.html
@@ -3,21 +3,33 @@
 
 <form [formGroup]="postForm">
 
-  <!-- <label> <h6> Post title: </h6> </label>  -->
-  <mat-form-field>
-      <input matInput formControlName="title" placeholder="New Title"
-        [ngClass]="{'is-invalid': (postForm.get('title').touched || postForm.get('title').dirty) && !postForm.get('title').valid }" />
-  </mat-form-field>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-9">
+
+        <mat-form-field>
+          <input matInput formControlName="title" placeholder="New Title"
+            [ngClass]="{'is-invalid': (postForm.get('title').touched || postForm.get('title').dirty) && !postForm.get('title').valid }" />
+        </mat-form-field>
         <label *ngIf="postForm.get('title').errors" class="error-text">
-            <i>*Required (must be longer than 3 characters) </i>
+          <i>*Required (must be longer than 3 characters) </i>
         </label>
+
+      </div>
+      <div class="col-sm-3">
   
-<br/>
-  <label> <h6> Date: </h6> </label> 
-  <br/>
-  <mat-form-field>
-    <input matInput formControlName="date">
-  </mat-form-field>
+        <label> <h6> Date: </h6> </label> 
+        <br/>
+        <mat-form-field>
+          <input matInput formControlName="date">
+        </mat-form-field>
+
+      </div>
+    </div>
+  </div>
+
+  
+  
 <br/>  
 <br/>  
 
@@ -47,19 +59,15 @@
 
         <div *ngSwitchCase="'edit'">
       
-          <form [formGroup]="quillForm">
-      
             <div>
-              <quill-editor [formControl]="quillForm.controls['body']"></quill-editor>
+              <quill-editor [formControl]="postForm.controls['body']"></quill-editor>
             </div>
-      
-          </form>
       
         </div>
       
         <div *ngSwitchCase="'view'">
       
-          <div *ngIf="quillForm" [innerHTML]="quillForm.value.body"></div>
+          <div *ngIf="postForm" [innerHTML]="postForm.value.body"></div>
       
         </div>
       
@@ -68,15 +76,8 @@
         <button mat-flat-button color="primary" class="doneButton">Done...</button> 
   </form>
 
-<!-- <br>Dirty:   {{ postForm.dirty }}
+<br>Dirty:   {{ postForm.dirty }}
 <br>Touched: {{ postForm.touched }}
 <br>Valid:   {{ postForm.valid }}
 <br>Value:   {{ postForm.value | json }}
-
-<br/>
-<br/>
-<h4>quillForm</h4>
-<pre *ngIf="quillForm">
-  {{ quillForm.value | json }}
-</pre> -->
 
