Se agregó validador para el UserName

--- a/src/app/user/user-form/user-form.component.html
+++ b/src/app/user/user-form/user-form.component.html
@@ -19,6 +19,9 @@
     <label *ngIf="form.get('username').errors" class="error-text">
         <i>*Required</i>
     </label>
+    <label *ngIf="form.controls.username.errors" class="error-text">
+            <i>*this UserName is not available</i>
+    </label>
     <br /><br /> 
 
     <label>
