arreglos casi finales del create

--- a/src/app/post/post-edit/post-edit.component.css
+++ b/src/app/post/post-edit/post-edit.component.css
@@ -11,5 +11,6 @@
 .doneButton {
     margin-left: 60px;
     margin-right: 60px;
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
