--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   (clickedProfile)="goToProfile()"
   (clickedLogIn)="goToLogIn()"
   (clickedLogOut)="logOut()"
+  (clickedRegister)="goToUserRegister()"
 ></app-nav>
 
 <router-outlet></router-outlet>
