fix de error con ngx-quill

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -6,7 +6,7 @@
     </li>
 
     <li>
-      <a class="nav-link active" href="#" [routerLink]="['/createEdit']">Create/Edit Posts</a>
+      <a class="nav-link active" href="#" [routerLink]="['posts', 'create']">Create/Edit Posts</a>
     <li>
       <a class="nav-link active" [routerLink]="['/post-list']">Listado de Posts</a>
     </li>
