--- a/src/app/post/post-edit/post-edit.component.html
+++ b/src/app/post/post-edit/post-edit.component.html
@@ -73,6 +73,9 @@
 
 
         <button mat-flat-button color="primary" class="doneButton">Done...</button> 
+
+    <pre>{{postForm.value | json}}</pre>
+
   </form>
 
 </div>
