--- a/src/app/post/post-thumbnail/post-thumbnail.component.html
+++ b/src/app/post/post-thumbnail/post-thumbnail.component.html
@@ -17,7 +17,33 @@
     <div class="card-footer">
       <div class="text-center">
         <p class="card-text">Post Rating: {{ post.rating }}</p>
-        <button type="button" class="btn btn-dark">View Post</button>
+
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#postModal">
+          View Complete Post
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="examplePostModal"
+          aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="examplePostModal">Post Body</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                {{ post.body }}
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </div>
