--- a/src/app/post/post-thumbnail/post-thumbnail.component.html
+++ b/src/app/post/post-thumbnail/post-thumbnail.component.html
@@ -18,6 +18,11 @@
       <div class="text-center">
         <p class="card-text">Post Rating: {{ post.rating }}</p>
 
+        <button type="button" class="btn btn-primary">
+          Edit Post
+        </button>
+        &nbsp;
+        &nbsp;
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#postModalLong">
           View complete post
