--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,10 @@
       <a class="nav-link active" href="#" (click)="emitPostsClick()">Posts</a>
     </li>
     <li>
-      <a class="nav-link active" [routerLink]="['/post-list']">Listado de Posts</a>
+      <a class="nav-link active" [routerLink]="['/posts/list']">Listado de Posts</a>
+    </li>
+    <li>
+      <a class="nav-link active" [routerLink]="['/posts/create']">Crear Post</a>
     </li>
   </div>
 
