--- a/src/app/post/post-edit/post-edit.component.html
+++ b/src/app/post/post-edit/post-edit.component.html
@@ -1,83 +1,116 @@
-
-<h4> {{ pageTitle }} </h4>
+<div *ngIf='!isCreate'>
+  <h4> Edit Post</h4>
+</div>
+<div *ngIf='isCreate'>
+  <h4> Create Post </h4>
+</div>
 
 <div class="container">
 
-<form [formGroup]="postForm">
+  <form [formGroup]="postForm">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-9">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9">
 
-        <mat-form-field>
-          <input matInput formControlName="title" placeholder="New Title"
-            [ngClass]="{'is-invalid': (postForm.get('title').touched || postForm.get('title').dirty) && !postForm.get('title').valid }" />
-        </mat-form-field>
-        <label *ngIf="postForm.get('title').errors" class="error-text">
-          <i>*Required (must be longer than 3 characters) </i>
-        </label>
+          <mat-form-field>
+            <input matInput formControlName="title" placeholder="New Title"
+              [ngClass]="{'is-invalid': (postForm.get('title').touched || postForm.get('title').dirty) && !postForm.get('title').valid }" />
+          </mat-form-field>
+          <label *ngIf="postForm.get('title').errors" class="error-text">
+            <i>*Required (must be longer than 3 characters) </i>
+          </label>
 
-      </div>
-      <div class="col-sm-3">
+        </div>
+        <div class="col-sm-3">
 
-        <mat-form-field>
-          <input matInput formControlName="date">
-        </mat-form-field>
+          <mat-form-field>
+            <input matInput formControlName="date">
+          </mat-form-field>
 
+        </div>
       </div>
     </div>
-  </div>
 
-  
-  
-<br/>  
-<br/>  
 
-<h6> Related Tags: </h6>
-<br/>  
- 
-<div class="row">
 
-    <div *ngFor="let tag of tags; let i=index" class="col-4">
+    <br />
+    <br />
+
+    <h6> Related Tags: </h6>
+    <br />
+
+    <!-- <div class="row">
+
+      <div *ngFor="let tag of tags; let i=index" class="col-4">
 
         <form [formGroup]="tagsForm">
-  
-            <label>
-              <mat-checkbox color="primary" formControlName="{{ tag }}"> <span>{{ tag }}</span> </mat-checkbox> 
-            </label>
-  
+
+          <label>
+            <mat-checkbox color="primary" formControlName="{{ tag }}"> <span>{{ tag }}</span> </mat-checkbox>
+          </label>
+
         </form>
+
+      </div>
+
+    </div> -->
+
+      <mat-form-field>
+        <mat-select>
+          <mat-option>None</mat-option>
+          <mat-option *ngFor="let tagPrueba of tagsTest" 
+                      (click)='addInArray(tagPrueba)'> 
+                      {{ tagPrueba }} 
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <br />
       
-  </div>
+      <mat-form-field class="example-chip-list">
+        <mat-chip-list #chipList formControlName="tags">
+          <mat-chip *ngFor="let tag of tagsList" 
+                    [selectable]="selectable"
+                    [removable]="removable" 
+                    (removed)="remove(tag)">
+            {{tag}}
+            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+          </mat-chip>
+          <input placeholder="New tag..."
+                 [matChipInputFor]="chipList"
+                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                 [matChipInputAddOnBlur]="addOnBlur"
+                 (matChipInputTokenEnd)="add($event)">
+        </mat-chip-list>
+      </mat-form-field>
 
-</div>
-
-<br/>
+    <br />
 
 
-<h6> Post: </h6>
+    <h6> Post: </h6>
 
     <button mat-button (click)="setPreview()">Preview</button>
     <br><br>
 
 
-        <div class="quillEdit" *ngIf='!preview'>
-      
-            <div>
-              <quill-editor [formControl]="postForm.controls['body']"></quill-editor>
-            </div>
-      
-        </div>
-      
-        <div class="quillEdit" *ngIf='preview'>
-      
-          <div *ngIf="postForm" [innerHTML]="postForm.value.body"></div>
-      
-        </div>
+    <div class="quillEdit" *ngIf='!preview'>
+
+      <div>
+        <quill-editor [formControl]="postForm.controls['body']"></quill-editor>
+      </div>
+
+    </div>
+
+    <div class="quillEdit" *ngIf='preview'>
+
+      <div *ngIf="postForm" [innerHTML]="postForm.value.body"></div>
+
+    </div>
 
 
-        <button mat-flat-button color="primary" class="doneButton" (click)="buttonAction()" [disabled]='postForm.invalid || !postForm.touched'>Done...</button> 
+    <button mat-flat-button color="primary" class="doneButton" (click)="buttonAction()"
+      [disabled]='postForm.invalid || !postForm.touched || !postForm.dirty'>Done</button>
   </form>
 
 </div>
-
