--- a/src/app/user/user-form/user-form.component.html
+++ b/src/app/user/user-form/user-form.component.html
@@ -56,34 +56,32 @@
     </label>
 
     <!-- <div *ngFor="let interest of interests; let i=index">
-
         <form [formGroup]="interestsForm">
-
             <label class="checkbox-inline">
               <input type="checkbox" name="interest" formControlName="{{ interest }}">
               &nbsp;
               {{ interest }}
             </label>
-
         </form>
-
     </div> -->
 
-    <!-- <mat-form-field>
-        <mat-chip-list #chipList>
-          <mat-chip *ngFor="let interest of interests" [selectable]="selectable"
-                   [removable]="removable" (removed)="remove(interest)">
-            {{interest.name}}
-            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-          </mat-chip>
-          <input placeholder="New interest..."
-                 [matChipInputFor]="chipList"
-                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                 [matChipInputAddOnBlur]="addOnBlur"
-                 (matChipInputTokenEnd)="add($event)">
-        </mat-chip-list>
-    </mat-form-field> -->
-
+    <mat-form-field class="example-chip-list">
+            <mat-chip-list #chipList formControlName="tags">
+              <mat-chip *ngFor="let tag of tagsList" 
+                        [selectable]="selectable"
+                        [removable]="removable" 
+                        (removed)="remove(tag)">
+                {{tag}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+              <input placeholder="New tag..."
+                     [matChipInputFor]="chipList"
+                     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                     [matChipInputAddOnBlur]="addOnBlur"
+                     (matChipInputTokenEnd)="add($event)">
+            </mat-chip-list>
+          </mat-form-field>
+    
 
     <br/><br/>
 
