Mejoras en componentes userForm y userView

--- a/src/app/user/user-form/user-form.component.html
+++ b/src/app/user/user-form/user-form.component.html
@@ -1,8 +1,8 @@
 <h2>{{pageTitle}}</h2>
 
-<br/>
+<br />
 
-<form [formGroup]="form" (ngSubmit)="onSubmit()"> 
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
     <label>
         Full Name:
         <input type="text" formControlName="fullName">
@@ -10,7 +10,7 @@
     <label *ngIf="form.get('fullName').errors" class="error-text">
         <i>*Required </i>
     </label>
-    <br /><br /> 
+    <br /><br />
 
     <label>
         UserName:
@@ -20,10 +20,10 @@
         <i>*Required</i>
     </label>
     <label *ngIf="userNameValidatorErrors" class="error-text">
-            <i>*this UserName is not available</i>
+        <i>*this UserName is not available</i>
     </label>
-    <!-- <pre>{{form.get('username').errors | json}}</pre> -->
-    <br /><br /> 
+
+    <br /><br />
 
     <label>
         Email:
@@ -32,7 +32,7 @@
     <label *ngIf="form.get('email').errors && form.get('email').errors.email" class="error-text">
         <i>Not a valid email</i>
     </label>
-    <br /><br /> 
+    <br /><br />
 
     <div *ngIf="this.isLogged===false">
         <label>
@@ -45,7 +45,7 @@
     <label>
         Profile Image:
         <input type="text" formControlName="pathImg">
-        <br/><br/>
+        <br /><br />
         <img src={{model.pathImg}} class="imgSize">
     </label>
 
@@ -55,54 +55,32 @@
         Interests:
     </label>
 
-    <!-- <div *ngFor="let interest of interests; let i=index">
-        <form [formGroup]="interestsForm">
-            <label class="checkbox-inline">
-              <input type="checkbox" name="interest" formControlName="{{ interest }}">
-              &nbsp;
-              {{ interest }}
-            </label>
-        </form>
-    </div> -->
-
-    <br/><br/>
+    <br /><br />
 
     <mat-form-field class="example-chip-list">
         <mat-chip-list #chipList>
-          <mat-chip
-            *ngFor="let interest of interests"
-            [selectable]="selectable"
-            [removable]="removable"
-            (removed)="remove(interest)">
-            {{interest}}
-            <mat-icon matChipRemove *ngIf="removable"></mat-icon>
-          </mat-chip>
-          <input
-            placeholder="New interest..."
-            #interestInput
-            [formControl]="interestCtrl"
-            [matAutocomplete]="auto"
-            [matChipInputFor]="chipList"
-            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-            [matChipInputAddOnBlur]="addOnBlur"
-            (matChipInputTokenEnd)="add($event)">
+            <mat-chip *ngFor="let interest of interests" [selectable]="selectable" [removable]="removable"
+                (removed)="remove(interest)">
+                {{interest}}
+                <mat-icon matChipRemove *ngIf="removable"></mat-icon>
+            </mat-chip>
+            <input placeholder="New interest..." #interestInput [formControl]="interestCtrl" [matAutocomplete]="auto"
+                [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
         </mat-chip-list>
         <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-          <mat-option *ngFor="let interest of filteredInterest | async" [value]="interest">
-            {{interest}}
-          </mat-option>
+            <mat-option *ngFor="let interest of filteredInterest | async" [value]="interest">
+                {{interest}}
+            </mat-option>
         </mat-autocomplete>
-      </mat-form-field>
-    
+    </mat-form-field>
 
-    <br/><br/>
 
-    <!-- <button (click)="saveChanges()">Save</button> -->
-    <!-- <a [routerLink]="['/posts/list']"> -->
+    <br /><br />
+
+    <!-- <Debe redireccionar a la vista del usuario -->
+    <a [routerLink]="['/posts/list']">
         <button type="submit" [disabled]="!form.valid">Save</button>
-    <!-- </a> -->
-    
-    <!--<pre>{{ interestsForm.value | json }}</pre>-->
-    <!--<pre>{{ form.value | json }}</pre>-->
+    </a>
 
 </form>
