Finalizado el create/edit para el PR

--- a/src/app/post/post-edit/post-edit.component.html
+++ b/src/app/post/post-edit/post-edit.component.html
@@ -70,7 +70,7 @@
       
       <mat-form-field class="example-chip-list">
         <mat-chip-list #chipList formControlName="tags">
-          <mat-chip *ngFor="let tag of tagsList" 
+          <mat-chip *ngFor="let tag of model.tags" 
                     [selectable]="selectable"
                     [removable]="removable" 
                     (removed)="remove(tag)">
